fix: eliminate FOUT on mobile by preloading fonts in <head>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,7 +43,7 @@
 
 @font-face {
   font-family: 'Merriweather';
-  src: url('../assets/fonts/merriweather-v33-latin-regular.woff2') format('woff2');
+  src: url('/fonts/merriweather-v33-latin-regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -51,7 +51,7 @@
 
 @font-face {
   font-family: 'Merriweather';
-  src: url('../assets/fonts/merriweather-v33-latin-italic.woff2') format('woff2');
+  src: url('/fonts/merriweather-v33-latin-italic.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -59,7 +59,7 @@
 
 @font-face {
   font-family: 'Merriweather';
-  src: url('../assets/fonts/merriweather-v33-latin-700.woff2') format('woff2');
+  src: url('/fonts/merriweather-v33-latin-700.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -67,7 +67,7 @@
 
 @font-face {
   font-family: 'DM Sans';
-  src: url('../assets/fonts/dm-sans-v17-latin-regular.woff2') format('woff2');
+  src: url('/fonts/dm-sans-v17-latin-regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -75,7 +75,7 @@
 
 @font-face {
   font-family: 'DM Sans';
-  src: url('../assets/fonts/dm-sans-v17-latin-italic.woff2') format('woff2');
+  src: url('/fonts/dm-sans-v17-latin-italic.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -83,7 +83,7 @@
 
 @font-face {
   font-family: 'DM Sans';
-  src: url('../assets/fonts/dm-sans-v17-latin-700.woff2') format('woff2');
+  src: url('/fonts/dm-sans-v17-latin-700.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
